--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,9 +26,11 @@ jobs:
     - name: Build docker image
       run: |
         docker build -t jorgeleon44/docker-graphql:0.0.2 .
+        docker build -t jorgeleon44/docker-graphql:latest .
     - name: Push docker image
       run: |
         docker push jorgeleon44/docker-graphql:0.0.2
+        docker push jorgeleon44/docker-graphql:latest
         
 
 
