--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,18 +28,21 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "New Version: $NEW_VERSION !!!!!"
-#    - name: Build docker image
-#      run: |
-#        docker build -t jorgeleon44/docker-graphql:0.0.2 .
-#        docker build -t jorgeleon44/docker-graphql:latest .
-#    - name: Push docker image
-#      run: |
-#        docker push jorgeleon44/docker-graphql:0.0.2
-#        docker push jorgeleon44/docker-graphql:latest
+    - name: Build docker image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t jorgeleon44/docker-graphql:$NEW_VERSION .
+        docker build -t jorgeleon44/docker-graphql:latest .
+    - name: Push docker image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push jorgeleon44/docker-graphql:$NEW_VERSION
+        docker push jorgeleon44/docker-graphql:latest
         
 
 
